add a play section

--- a/index.html
+++ b/index.html
@@ -53,13 +53,52 @@
             </div>
         </section>
         
-        <section>
+        <section class="features-game">
             <h2 class="funny-description">Online Games <span class="funny-video">Funny Videos</span></h2>
-            <p class="gray-layout"></p>
+            <p class="gray-layout gray">A Collection of Hilarious Videos to Brighten Your Day</p>
+
+            <div class="feature-game">
+                <div class="feature-game-option">
+                    <img src="./images/Rectangle 4.png" alt="">
+                    <p class="gray-layout">No Download. No Installs. Play <br> games Instantly on Gamer.</p>
+                </div>
+                <div class="feature-game-option">
+                    <img src="./images/Rectangle 5.png" alt="">
+                    <p class="gray-layout">Did you score? #unblockedgames <br> #school</p>
+
+                </div>
+                <div class="feature-game-option"
+                ><img src="./images/Rectangle 6.png" alt="">
+                <p class="gray-layout">Breaking game records like OG</p>
+            </div>
+                <div class="feature-game-option">
+                    <img src="./images/Rectangle 7.png" alt="">
+                    <p class="gray-layout">Busted gaming on school laptop,<br> but you are still lit.</p>
+                </div>
+            </div>
 
 
 
         </section>
+
+        <section class="play-continer">
+            <div class="play-description">
+                <h3 class="play-title"> <span class="play-title-pink">Play Instantly,<br></span>
+                    No Downloads <br>
+                    No Installs.
+                    
+                </h3>
+                <p class="gray-layout">Play games online for free without <br> downloading. Just click the Play button <br>  and play instantly in your browser.
+
+                </p>
+            </div>
+            <div class="play-img"><img src="./images/Rectangle 55.png" alt=""></div>
+            <!-- <div class="play-img-small"><img src="./images/Rectangle 66.png" alt=""></div> -->
+
+        </section>
+
+
+
 
     </main>
     <footer>
