--- a/index.html
+++ b/index.html
@@ -61,22 +61,26 @@
                 <div class="feature-game-option">
                     <img class="show-border" src="./images/Rectangle 4.png" alt="">
                     <img class="video-icon" src="./images/play-button 1.svg" alt="">
+                    <div class="watch-now">Watch now</div>
                     <p class="gray-layout">No Download. No Installs. Play <br> games Instantly on Gamer.</p>
                 </div>
                 <div class="feature-game-option">
                     <img class="show-border" src="./images/Rectangle 5.png" alt="">
                     <img class="video-icon" src="./images/play-button 1.svg" alt="">
+                    <div class="watch-now">Watch now</div>
                     <p class="gray-layout">Did you score? #unblockedgames <br> #school</p>
 
                 </div>
                 <div class="feature-game-option"
                 ><img class="show-border" src="./images/Rectangle 6.png" alt="">
                 <img class="video-icon" src="./images/play-button 1.svg" alt="">
+                <div class="watch-now">Watch now</div>
                 <p class="gray-layout">Breaking game records like OG</p>
             </div>
                 <div class="feature-game-option">
                     <img  class="show-border"src="./images/Rectangle 7.png" alt="">
                     <img class="video-icon" src="./images/play-button 1.svg" alt="">
+                    <div class="watch-now">Watch now</div>
                     <p class="gray-layout">Busted gaming on school laptop,<br> but you are still lit.</p>
                 </div>
             </div>
@@ -162,6 +166,45 @@
 
     </main>
     <footer>
+        <div class="nav-section  footer-logo">
+            <img src="images/Frame.png" alt="">
+
+            <h3 class="nav-header"><span class="pink-color">G</span><span class="white">amer</span></h3>
+        </div>
+        <div class="footer-ul">
+            <ul class="footer-name">
+                <li><a href="#">Our Story</a></li>
+                <li><a href="#">Games</a></li>
+                <li><a href="#">Web Games</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">My Account</a></li>
+
+            </ul>
+        </div>
+        <div class="footer-icon">
+            <ul class="footer-icon-logo">
+                <li><i class="fa-brands fa-twitter"></i></li>
+                <li><i class="fa-brands fa-square-facebook"></i></li>
+                <li><i class="fa-brands fa-youtube"></i></li>
+                <li><i class="fa-brands fa-linkedin"></i></li>
+                <li><i class="fa-brands fa-instagram"></i></li>
+                <li><i class="fa-brands fa-apple"></i></li>
+
+            </ul>
+        </div>
+
+        <div class="footer-description">
+            <ul>
+                <p>Terms and Conditions</p>
+                <p>Privacy Policy</p>
+                <p>Cookie Policy</p>
+                <p>Privacy Settings</p>
+            </ul>
+        </div>
+
+        <p class="copy-right">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+
 
        
     </footer>
